fix loading screen and overflow issue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,7 +16,7 @@
 
  .app {
     display: block;
-    max-height: 100%;
+    /* max-height: 100%; */
  }
 
  a {
@@ -59,11 +59,11 @@ input:hover {
 }
 
  .content {
-    height: 87vh;
-    max-height: 87vh;
+    height: 90vh;
+    max-height: 90vh;
      /* calc */
     scroll-behavior: auto;
-    overflow: auto;
+    /* overflow: auto; */
  }
  
  /* #root {
