--- a/app/assets/stylesheets/show_dates.scss
+++ b/app/assets/stylesheets/show_dates.scss
@@ -19,6 +19,7 @@
     color: black;
     // min-height: 100vh;
     display: flex;
+    overflow: hidden;
     .date-specific-filter {
         display: block;
         margin: 5px;
